mountall (2.8) UNRELEASED; urgency=low

  * src/mountall.c:
    - Flush the D-Bus connection queue before exiting, otherwise we can
      end up leaving important events like "filesystem" in the memory queue
      without ever sending it on the socket.  LP: #533054.
    - Move the message about disks being checked here from plymouth.

 -- Scott James Remnant <scott@ubuntu.com>  Tue, 09 Mar 2010 14:45:57 +0000

mountall (2.7) lucid; urgency=low

  * src/mountall.c:
    - Prepend "keys:" to messages which require user interaction in
      plymouth.

 -- Alberto Milone <alberto.milone@canonical.com>  Thu, 04 Mar 2010 16:02:04 +0100

mountall (2.6) lucid; urgency=low

  * debian/control: add versioned-dependency on coreutils to get "cp -n"
    LP: #527829.

 -- Scott James Remnant <scott@ubuntu.com>  Fri, 26 Feb 2010 16:16:24 +0000

mountall (2.5) lucid; urgency=low

  * conf/mounted-dev.conf:
    - Go back to copying from /lib/udev/devices, this is much faster for
      the devtmpfs case since almost all devices will already exist.
      LP: #507162.
  * src/mountall.c:
    - If we mount something new over /dev, we need to make /dev/console and
      /dev/null again as otherwise the whole system falls apart (even init).
      LP: #513919. 

 -- Scott James Remnant <scott@ubuntu.com>  Wed, 17 Feb 2010 11:56:41 +0000

mountall (2.4) lucid; urgency=low

  * conf/mountall-net.conf: only send SIGUSR1 to the main process, not to
    any pre-start or post-stop script we might have; killing the post-stop
    script with -USR1, though an unlikely race to hit, is definitely wrong.
    LP: #506902.

  [ Johan Kiviniemi ]
  * src/mountall.c: The mount table needs to exist for parse_filesystems
    - parse_filesystems() could call mount_proc(), which would call
      find_mount() and segfault.  LP: #503212.
  * src/mountall.c: Handle TAG_UNKNOWN.  LP: #505748.
  * src/mountall.c: Ensure boredom_timer is set to NULL when freeing